# A_plus_Tsukuba

./: .dockerignore  .env_local  .gitignore  Dockerfile  README.md  docker-compose.override.yml.forM1MacUsers  docker-compose.yml  pyproject.toml  pytest.sh  requirements.txt  set-up-env.test.sh  start.bat  start.py  start.sh
.github/: FUNDING.yml
.github/workflows/: django.yml
A_plus_Tsukuba/: settings.py  urls.py
board/: admin.py  apis.py  forms.py  models.py  serializers.py  urls.py  views.py
board/static/board/: ITFchk.js  advertise.js  chat.css  col7.js  common.css  common.js  double_post.js  get_app.js  manifest.json  new_questions.js  search.css  search.js  send.js  share.css  share.js  sw.js  textbooks.js
board/templates/: chat_modals.html  col5.html  col7.html  footer.html  header.html  html_head.html  load_javascript.html  reviews.html  send.html  textbooks.html
board/templates/board/: About.html  App.html  Chat.html  NewQuestions.html  Privacy.html  Search.html  Terms.html  install-sw.html
board/templates/widgets/: bs5_button_checkbox_input.html  bs5_button_checkbox_select.html  bs5_button_checkbox_select_option.html
board/tests/: test_models.py  test_views.py
init/: kdb2db_mysql.py
tools/: docker.py
