[tool.poetry]
name = "a-plus-tsukuba"
version = "1.1.0"
description = "A+つくばは大学の課題を効率よく十分な品質で提出することができない (A+が取れない!!)問題を解決したい 同じ講義に知り合いが少ない筑波大生向けの筑波大生専用の匿名学習支援SNSです。"
authors = ["half-blue <info@aplus-tsukuba.net>"]
readme = "README.md"
packages = [{include = "a_plus_tsukuba"}]

[tool.poetry.dependencies]
python = "^3.8.1"
Django = ">=3.2, <3.3"
djangorestframework = "^3.14.0"
django-environ = "^0.9.0"
mysqlclient = "^2.1.1"
django-widget-tweaks = "^1.4.12"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^0.991"
pytest = "^7.2.0"
pytest-django = "^4.5.2"
black = "^24.3.0"
isort = "^5.11.4"
django-debug-toolbar = "^2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
